--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <script src="./src/index.js" type="module"></script>
     <script>
         // service worker
-        if ('serviceWorker' in navigator) {
+        if ('serviceWorker' in navigator && location.hostname !== "127.0.0.1" && location.hostname !== "localhost") {
             window.addEventListener('load', async () => {
                 try {
-                    let reg = await navigator.serviceWorker.register('./sw.js');
+                    let reg = await navigator.serviceWorker.register('./cache.sw.js');
                     console.log('Service Worker registered', reg);
                 } catch (err) {
                     console.warn('Service worker registration failed: ', err);
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <div class="infohud"><span class="peerpercent"></span></div>
+    <div class="infohud"><span class="peerpercent">000</span></div>
 </body>
 
 </html>
